# unomol

./: AngMomInts.cpp  AngMomInts.hpp  AuxFunctions.cc  AuxFunctions.hpp  Basis.cc  Basis.hpp  CMakeLists.txt  Center.cc  FField.cc  FField.cpp  FField.hpp  FileCache.hpp  GDPMInts.cc  GDPMInts.cpp  GDPMInts.hpp  MD_Dfunction.cc  MD_Dfunction.hpp  MD_Rfunction.cc  MD_Rfunction.hpp  Makefile  Moments.cc  Moments.cpp  Moments.hpp  OneElectronInts.cc  OneElectronInts.cpp  OneElectronInts.hpp  README.md  RHF.cc  RHF.hpp  RHF_MPI.cc  RHF_MPI.hpp  Rys.cc  Rys.cpp  Rys.hpp  SCFAux.hpp  Shell.cc  Shell.hpp  Stopwatch.hpp  Structs.cc  Structs.hpp  (+30 more)
basis_reader/: ar_bas  ar_bas~  bas1  bas2  bas3  bas4  bas5  conv_to_patmol  conv_to_patmol.cpp  conv_to_patmol.cpp~  convert_basis  convert_basis.cpp.back  convert_basis.cpp~  he_bas  he_bas1  he_bas2  he_bas3  he_bas~  look  newbas.out  newbas.out.back  newbas.out.back~  newbas.out~  nmr.dkh.tzp.nw  putils_cxx.cpp  putils_cxx.cpp~  putils_cxx.hpp  putils_cxx.hpp~  read_bs  read_bs.cpp  read_pbas_lib.cpp  sapporo-qzp-2012.lib
basis_utils/: cnv2scat.cpp
scat/: CMakeLists.txt  atscat.cpp  mesh.in  meshgen.cpp  radial_mesh.hpp
test/: CMakeLists.txt  moments.dat.3g.co  moments.dat.3g.h2o  moments.dat.3g.hf  moments.dat.3g.nh3  moments.dat.431.co  moments.dat.431.h2o  moments.dat.431.hf  moments.dat.431.nh3  moments.dat.631.co  moments.dat.631.h2o  moments.dat.631.hf  moments.dat.631.nh3  nrgs.dat.example  patin.dat.3g.ch4  patin.dat.3g.h2  patin.dat.3g.h2o  patin.dat.3g.hf  patin.dat.3g.n2  patin.dat.3g.nh3  patin.dat.431.co  (+59 more)
(+107 files in other folders)
